@@ -43,6 +43,8 @@ TEXI2DVI = `if test -f $(top_srcdir)/../texinfo/util/texi2dvi; then \
              echo texi2dvi; \
            fi`
 endif %?CYGNUS%
+
+TEXI2PDF = $(TEXI2DVI) --pdf
 endif %?LOCAL-TEXIS%
 
 
@@ -57,22 +59,26 @@ DVIPS = dvips
 	$(DVIPS) $< -o $@
 endif %?LOCAL-TEXIS%
 
-.PHONY: info info-am dvi dvi-am
+.PHONY: info info-am dvi dvi-am pdf pdf-am
 if %?SUBDIRS%
-RECURSIVE_TARGETS += info-recursive dvi-recursive
+RECURSIVE_TARGETS += info-recursive dvi-recursive pdf-recursive
 .PHONY info: info-recursive
 .PHONY dvi: dvi-recursive
+.PHONY pdf: pdf-recursive
 else !%?SUBDIRS%
 info: info-am
 dvi: dvi-am
+pdf: pdf-am
 endif !%?SUBDIRS%
 
 if %?LOCAL-TEXIS%
 info-am: $(INFO_DEPS)
 dvi-am: $(DVIS)
+pdf-am: $(PDFS)
 else ! %?LOCAL-TEXIS%
 info-am:
 dvi-am:
+pdf-am:
 endif ! %?LOCAL-TEXIS%
 
 
