@@ -1,4 +1,5 @@
 New in 1.6a:
+* PDF files are generated by Automake
 * `make distcheck' will enforce DESTDIR support by attempting
   a DESTDIR install.
 * `+=' can be used in conditionals, even if the augmented variable
