@@ -1,3 +1,15 @@
+2002-05-03  Paolo Bonzini  <bonzini@gnu.org>
+
+	* automake.in (required_targets): Add the pdf and pdf-am targets.
+	(initialize_per_input): Likewise.
+	(scan_texinfo_file): Add pdf to @clean_suffixes.
+	(handle_texinfo_helper): Output the .pdf dependencies, and define
+	the PDFS variable.
+	* lib/am/texinfos.am (TEXI2PDF): New variable.
+	(pdf, pdf-am): New targets.
+	(.PHONY): Add pdf, pdf-am, and pdf-recursive.
+	* lib/am/texibuild.am (.%SUFFIX%.pdf): New rule.
+
 2002-06-13  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	Fix pr307.test failure with gcc 3.x.
